Inicio da refatoração das classes de manipulação de exceção

--- a/src/main/webapp/erro.xhtml
+++ b/src/main/webapp/erro.xhtml
@@ -34,7 +34,7 @@
 				</h1>
 	
 				<hr />
-				<h3 class="lighter smaller">Detalhes do erro: #{requestScope['error-message']}</h3>
+				<h3 class="lighter smaller">Detalhes do erro: #{requestScope['mensagemErro']}</h3>
 	
 				<div>
 	
