--- a/src/main/webapp/erro.xhtml
+++ b/src/main/webapp/erro.xhtml
@@ -30,12 +30,12 @@
 					<span class="blue bigger-125">
 						<i class="ace-icon fa fa-exclamation-triangle"></i>
 					</span>
-					Operação inválida!
+					Ocorreu um erro inesperado!
 				</h1>
 	
 				<hr />
-				<h3 class="lighter smaller">Detalhes do erro: #{requestScope['mensagemErro']}</h3>
-	
+				<h3 class="lighter smaller">Entre em contato com o administrador do sistema</h3>
+<!-- 	
 				<div>
 	
 					<div class="space"></div>
@@ -54,7 +54,8 @@
 					</ul>
 				</div>
 	
-				<hr />
+ -->
+ 				<hr />
 				<div class="space"></div>
 	
 				<div class="center">
