Estilização dos grid's para usuarios, lançamentos e baixas

--- a/src/main/webapp/fornecedor/fornecedor.xhtml
+++ b/src/main/webapp/fornecedor/fornecedor.xhtml
@@ -103,7 +103,7 @@
 						<p:column sortBy="#{fornecedor.razaoSocial}">
 							<f:facet name="header">
 								<i class="ace-icon fa fa-eye"></i>							
-								Descrição
+								Razão Social
 							</f:facet>
 							<h:outputText value="#{fornecedor.razaoSocial}"/>
 						</p:column>
@@ -111,7 +111,7 @@
 						<p:column sortBy="#{fornecedor.nomeFantasia}">
 							<f:facet name="header">
 								<i class="ace-icon fa fa-eye"></i>							
-								Descrição
+								Nome Fantasia
 							</f:facet>
 							<h:outputText value="#{fornecedor.nomeFantasia}"/>
 						</p:column>
@@ -119,7 +119,7 @@
 						<p:column sortBy="#{fornecedor.cpfCnpj}" width="15%">
 							<f:facet name="header">
 								<i class="ace-icon fa fa-eye"></i>							
-								Descrição
+								CNPJ / CPF
 							</f:facet>
 							<h:outputText value="#{fornecedor.cpfCnpj}"/>
 						</p:column>
