Incluir permissões: Back-end e front-end concluidos.

--- a/src/main/webapp/usuario/usuariocadastro.xhtml
+++ b/src/main/webapp/usuario/usuariocadastro.xhtml
@@ -114,7 +114,7 @@
 									</div>
 								</div>
 	
-								<div class="row" jsf:rendered="#{usuarioCadastroBean.novoUsuario}">
+								<div class="row" jsf:rendered="#{usuarioCadastroBean.usuario.novo}">
 									<div class="col-sm-6">
 										<div class="form-group">
 											<label class="control-label" jsf:for="senha">Senha</label>
@@ -223,7 +223,7 @@
 												Classificação
 											</th>
 											<th>
-												<i class="ace-icon fa fa-user-plus"></i>
+												<i class="ace-icon fa fa-tag"></i>
 												Permissão
 											</th>
 											<th>
