Prototipação do filtro no formulário de pagamento

--- a/src/main/webapp/baixa/baixa.xhtml
+++ b/src/main/webapp/baixa/baixa.xhtml
@@ -108,7 +108,7 @@
 											<i class="ace-icon fa fa-check-square-o bigger-110"></i>
 											Baixar na Data
 											<f:ajax
-												execute="@this"
+												execute="@this dataBaixa"
 												render="@form"/>
 										</button>
 									</span>
