Remoção dos warnings

--- a/src/main/webapp/pagamento/pagamento.xhtml
+++ b/src/main/webapp/pagamento/pagamento.xhtml
@@ -211,7 +211,7 @@
 								<f:ajax
 									execute="@this"
 									render="btnConfirmaExclucao mensagem"
-									listener="#{pagamentoBean.selecionaPagamento(pagamento)}"/>
+									listener="#{pagamentoBean.selecionarParcela(pagamento)}"/>
 							</button>
 						</p:column>
 
