Responsividade nas tabelas do PrimeFaces

--- a/src/main/webapp/baixa/baixa.xhtml
+++ b/src/main/webapp/baixa/baixa.xhtml
@@ -124,7 +124,7 @@
 					</div>
 
 
-					<p:dataTable id="tabela"
+					<p:dataTable id="tabela" reflow="true"
 						emptyMessage="Nenhum registro encontrado para o filtro selecionado"
 						value="#{baixaBean.parcelas}" var="parcela" rowKey="#{parcela.idPagamentoParcela}"
 						selection="#{baixaBean.parcelasSelecionadas}"
