--- a/src/main/webapp/conta/conta.xhtml
+++ b/src/main/webapp/conta/conta.xhtml
@@ -72,7 +72,7 @@
 					</div>
 					
 
-					<p:dataTable id="tabela"
+					<p:dataTable id="tabela" reflow="true"
 						emptyMessage="Nenhum registro encontrado"
 						value="#{contaBean.contas}" var="conta" rowKey="#{conta.idConta}"
 						selection="#{contaBean.contasSelecionadas}"
