--- a/src/main/webapp/fornecedor/fornecedor.xhtml
+++ b/src/main/webapp/fornecedor/fornecedor.xhtml
@@ -70,7 +70,7 @@
 					</div>
 					
 					
-					<p:dataTable id="tabela"
+					<p:dataTable id="tabela" reflow="true"
 						emptyMessage="Nenhum registro encontrado"
 						value="#{fornecedorBean.fornecedores}" var="fornecedor" rowKey="#{fornecedor.idFornecedor}"
 						selection="#{fornecedorBean.fornecedoresSelecionados}"
