--- a/src/main/webapp/setor/setor.xhtml
+++ b/src/main/webapp/setor/setor.xhtml
@@ -73,7 +73,7 @@
 					</div>
 					
 					
-					<p:dataTable id="tabela"
+					<p:dataTable id="tabela" reflow="true"
 						emptyMessage="Nenhum registro encontrado"
 						value="#{setorBean.setores}" var="setor" rowKey="#{setor.idSetor}"
 						selection="#{setorBean.setoresSelecionados}"
