--- a/src/main/webapp/pagamento/pagamento.xhtml
+++ b/src/main/webapp/pagamento/pagamento.xhtml
@@ -130,7 +130,7 @@
 						
 					</div>
 
-					<p:dataTable id="tabela"
+					<p:dataTable id="tabela" reflow="true"
 						emptyMessage="Nenhum registro encontrado para o filtro selecionado"
 						value="#{pagamentoBean.parcelas}" var="parcela" rowKey="#{parcela.idPagamentoParcela}"
 						selection="#{pagamentoBean.parcelasSelecionadas}"
