Salvar preferencias do usuario

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -102,7 +102,7 @@
 													<div class="space"></div>
 
 													<div class="clearfix">
-														<button 
+														<button jsf:id="btn-login"
 															type="submit" 
 															class="width-35 pull-right btn btn-sm btn-primary">
 															<i class="ace-icon fa fa-unlock"></i>
