Liquidação a vista no lançamento da parcela de pagamento

--- a/src/main/webapp/pagamento/pagamentocadastro.xhtml
+++ b/src/main/webapp/pagamento/pagamentocadastro.xhtml
@@ -81,7 +81,7 @@
 										<div class="form-group">
 											<label class="control-label" jsf:for="emissao">Emissão</label>
 											<div class="input-group">
-												<input type="date" class="form-control" 
+												<input type="date" class="form-control" autofocus="autofocus"
 													jsf:id="emissao"
 													jsf:binding="#{emissao}" 
 													jsf:value="#{pagamentoCadastroBean.pagamento.emissao}">
