--- a/src/main/webapp/pagamento/pagamento.xhtml
+++ b/src/main/webapp/pagamento/pagamento.xhtml
@@ -167,7 +167,7 @@
 
 					<p:dataTable id="tabela" reflow="true"
 						emptyMessage="Nenhum registro encontrado para o filtro selecionado"
-						value="#{pagamentoBean.parcelas}" var="parcela" rowKey="#{parcela.parcela}"
+						value="#{pagamentoBean.parcelas}" var="parcela" rowKey="#{parcela.idParcela}"
 						selection="#{pagamentoBean.parcelasSelecionadas}"
 						 
 						rows="#{sessionBean.itensPorPagina}"
