Tratamento da exceção ApplicationException no manipulador de exceções e na baixa de parcelas

--- a/src/main/webapp/baixa/baixacadastro.xhtml
+++ b/src/main/webapp/baixa/baixacadastro.xhtml
@@ -211,7 +211,7 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="form-group">
-											<label class="control-label" jsf:for="dtPgto">Data Baixa</label>
+											<label class="control-label" jsf:for="dtPgto">Data do Pagamento</label>
 											<div class="input-group">
 												<input type="date" class="form-control" 
 													jsf:id="dtPgto"
@@ -241,7 +241,7 @@
 										
 									<div class="col-sm-4">
 										<div class="form-group">
-											<label class="control-label" jsf:for="outros">Valor da Baixa</label>
+											<label class="control-label" jsf:for="outros">Valor</label>
 											<input type="text" class="form-control currency" autofocus="autofocus"   
 												jsf:id="valor"
 												jsf:binding="#{valor}" 
